Definindo interfaces de serviços

--- a/src/DevIO.Domain/DevIO.Domain.csproj
+++ b/src/DevIO.Domain/DevIO.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Entities\Validations\ProdutoValidation.cs~RF1023fa2.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.1.1" />
   </ItemGroup>
 
